feat: 보안 강화 및 이메일 설정 외부화
- 보안 설정 강화
  - 세션 관리 정책을 STATELESS로 설정
  - 인증 토큰 처리 시 빈 권한 리스트 최적화
  - Authorization 헤더 필수값 검증 로직 개선

- 이메일 도메인 설정 외부화
  - EmailProperties 설정 클래스 추가
  - application.yml에 이메일 도메인 설정 추가
  - 하드코딩된 도메인을 설정값으로 대체

- API 응답 표준화
  - 회원가입 응답을 Map 형식으로 통일
  - 리프레시 토큰 쿠키명 상수화

기타:
- @EnableConfigurationProperties 설정 추가
- 쿠키 관련 매직 스트링 제거